--- a/views/guestpage/guest_area.html
+++ b/views/guestpage/guest_area.html
@@ -19,7 +19,7 @@
                 <img src="gfx/loading-bubbles.svg" width="150" height="150">
             </div>
             <div class="guestBox" id="clearBox">
-                <ul>
+                <ul id="regHintBox">
                     <li><img src="gfx/guest/icon_01.svg"><span>encrypt your data<br>and communication</span></li>
                     <li><img src="gfx/guest/icon_02.svg"><span>present yourself and<br>stay in touch with your buddies</span></li>
                     <li><img src="gfx/guest/icon_03.svg"><span>save, organize and<br>share your files</span></li>
