reader & filesystem css

--- a/views/guestpage/guest_area.html
+++ b/views/guestpage/guest_area.html
@@ -23,7 +23,7 @@
                     <li><img src="gfx/guest/icon_01.svg"><span>encrypt your data<br>and communication</span></li>
                     <li><img src="gfx/guest/icon_02.svg"><span>present yourself and<br>stay in touch with your buddies</span></li>
                     <li><img src="gfx/guest/icon_03.svg"><span>save, organize and<br>share your files</span></li>
-                    <li><img src="gfx/guest/icon_04.svg"><span>use public files and<br>make your files accesible</span></li>
+                    <li><img src="gfx/guest/icon_04.svg"><span>use public files and<br>make your files accessible</span></li>
                 </ul>
             </div>
         </div>
