--- a/inc/css/style.css
+++ b/inc/css/style.css
@@ -782,20 +782,20 @@ div#showElement.frameRight ul li {
     margin: 2px;
 }
 
-div#showElement.frameRight ul li:hover {
+div#showElement.frameRight ul li:hover{
     background-color: #cfd8dc;
+}
+
+div#showElement.frameRight ul li:hover span.buttons {
+    display: block;
+    width: 30px;
+    margin-top: -114px;
+    margin-left: 82px;
+    text-align: center;
+}
     
-    span.buttons {
-        display: block;
-        width: 30px;
-        margin-top: -114px;
-        margin-left: 82px;
-        text-align: center;
-    }
-    
-    span.buttons .scoreButton {
-        display:none;
-    }
+div#showElement.frameRight ul li:hover span.buttons .scoreButton {
+    display:none;
 }
 
 
@@ -827,7 +827,7 @@ div#showElement.frameRight ul li:hover {
 }
 
 .leftNav > ul > li:hover {
-    background: #C7C7C7;
+    background: #FFFFFF;
 }
 
 .leftNav > ul > li.header{
@@ -1258,6 +1258,10 @@ color: #FFF;
 	clear:both;
 }
 
+.filetable tr:hover{
+	background-color: #cfd8dc;
+}
+
 .filetable tr td:first-of-type img{
     margin-right: 5px;
     margin-left: 5px;
@@ -1342,6 +1346,39 @@ color: #FFF;
 .shareBox .btn img{
 	margin-bottom: -5px;
 }
+
+ul .elementSettings {
+    display: none;
+}
+
+.dropdown li {
+    height: auto!important;
+    width: 100%!important;
+    cursor: pointer;
+    margin: 0!important;
+    background-color: #37474f;
+    color: #ffffff;
+    padding: 3px;
+    border: 1px #263238;
+    border-top-style: none;
+    border-bottom-style: solid;
+    border-left-style: none;
+    border-right-style: none;
+}
+
+.dropdown li:hover {
+    background-color: #263238!important;
+}
+
+.dropdown li:active {
+    background-color: #263238!important;
+}
+
+
+
+
+
+
 /* reader */
 
 
@@ -1412,71 +1449,83 @@ color: #FFF;
     cursor:pointer;
 }
 
-	.openFile header{
-		height:40px;
-		cursor: default;
-                vertical-align: middle;
-	}
-	
-	.openFile header .title{
-            color:  #313131;
-            font-size: 16px; /* Näherungswert aufgrund einer Schriftersetzung */
-            font-weight: 150;
-            text-align: left;
-	}
-	.openFile header .icon{
-            width: 24px;
-            height: 24px;
-	}
-	.openFile header .itemSettingsButton{
-	}
-	
-	.openFile header span>span{
-	}
 
-            .uffViewerMain{
-                position: absolute;
-                top: 40px;
-                right: 150px;
-                bottom: 0px;
-                left: 0px;
-                overflow: auto;
-            }
-            
-            .uffViewerMain ol{
-                list-style-type:decimal;
-            }
-            
-            .uffViewerMain li{
-                height: auto;
-            }
 
-            .uffViewerNav{
-                position: absolute;
-                top: 40px;
-                right: 0px;
-                bottom: 0px;
-                width: 150px;
-                background: #FFFFFF;
-                border-left: 1px solid #c9c9c9;
-            }
-            
-            .uffDocumentSettings{
-                position: absolute;
-                margin-top: 40px;
-                background: #E5E5E5;
-                height: 24px;
-                padding: 3px;
-                border-bottom: 1px solid #c9c9c9;
-                border-right: 1px solid #c9c9c9;
-            }
-            
-            .cke_editor_1{
-                position: absolute;
-                top: 0px;
-                right: 150px;
-                bottom: 0px;
-            }
+
+
+.openFile header{
+    display: block;
+    height: 40px;
+    vertical-align: middle;
+}
+.openFile header .title{
+    display: inline-block;
+    color:  #313131;
+    font-size: 16px;
+    font-weight: 150;
+    text-align: left;
+}
+.openFile header .icon{
+    display: inline-block;
+    width: 24px;
+    height: 24px;
+}
+.openFile header .itemSettingsButton{
+    display: inline-block;
+}
+.openFile header .scoreButton{
+    display: inline-block;
+}
+
+.openFile header span>span{
+}
+
+
+
+
+.uffViewerMain{
+    position: absolute;
+    top: 40px;
+    right: 150px;
+    bottom: 0px;
+    left: 0px;
+    overflow: auto;
+}
+
+.uffViewerMain ol{
+    list-style-type:decimal;
+}
+
+.uffViewerMain li{
+    height: auto;
+}
+
+.uffViewerNav{
+    position: absolute;
+    top: 40px;
+    right: 0px;
+    bottom: 0px;
+    width: 150px;
+    background: #FFFFFF;
+    border-left: 1px solid #c9c9c9;
+}
+
+.uffDocumentSettings{
+    position: absolute;
+    margin-top: 40px;
+    background: #E5E5E5;
+    height: 24px;
+    padding: 3px;
+    border-bottom: 1px solid #c9c9c9;
+    border-right: 1px solid #c9c9c9;
+}
+
+.cke_editor_1{
+    position: absolute;
+    top: 0px;
+    right: 150px;
+    bottom: 0px;
+}
 
 	.iframeFrame{
 		position: absolute;
@@ -1509,18 +1558,22 @@ color: #FFF;
 	}
         
 .imageReader .mainImage {
-      background-color: #263238;
-      text-align: center;
+    background-color: #263238;
+    overflow: auto;
+    text-align: center;
 }  
 
 .imageReader .mainImage img {
-      display: inline-block;
+    display: inline-block;
+    width: 500px;
 }     
 
 .imageReader .previewImages {
     background-color: #37474f;
-    overflow: auto;
+    overflow-y: hidden;
+    overflow-x: auto;
     height: 150px;
+    width: auto;
     padding: 5px;
 }    
 
@@ -2506,8 +2559,7 @@ margin-bottom: -5px;
 }
 
 
-.rightclick, .itemSettingsWindow, .fileBrowserSettings{
-    
+.rightclick, .itemSettingsWindow{
     background-color: #37474f;
 }
 
@@ -2526,7 +2578,30 @@ margin-bottom: -5px;
 }
 
 .fileBrowserSettings{
-	display: none;
+    display: none;
+}
+
+.fileBrowserSettings li{
+    height: auto!important;
+    width: 100%!important;
+    cursor: pointer;
+    margin: 0!important;
+    background-color: #37474f;
+    color: #ffffff!important;
+    padding: 3px;
+    border: 1px #263238;
+    border-top-style: none;
+    border-bottom-style: solid;
+    border-left-style: none;
+    border-right-style: none;
+}
+
+.fileBrowserSettings li:hover{
+    background-color: #263238!important;
+}
+
+.fileBrowserSettings li:active{
+    background-color: #00bcd4!important;
 }
 
 .itemSettingsWindow ul, .rightclick ul{
