search updated, but not finished

--- a/views/guestpage/dock.html
+++ b/views/guestpage/dock.html
@@ -5,8 +5,9 @@
                 <td><div id="personalButton" class="button">Log In</div></td>
                 <td><div id="moduleMenu" class="button">Applications</div></td>
                 <!-- <td><div id="modulePlayer" class="module">&nbsp;&nbsp;Player</div></td> -->
-                <td align="right"><input type="text" name="searchField" id="searchField" placeholder="search"></td>
                 <td align="right" id="clockDiv" style="color: #FFFFFF; float: right"></td>
+                
+                <td align="right" style="color: #FFFFFF; float: right"><a href='#search' title='search something' id='searchTrigger'><span class='icon white-search'></span></a></td>
             </tr>
         </table>
     </div>
