--- a/inc/css/plugins.css
+++ b/inc/css/plugins.css
@@ -1,11 +1,11 @@
 @font-face {
     font-family: 'ubuntu';
-    src: url('inc/fonts/ubuntumono-r-webfont.eot');
-    src: url('inc/fonts/ubuntumono-r-webfont.eot?#iefix') format('embedded-opentype'),
-         url('inc/fonts/ubuntumono-r-webfont.woff2') format('woff2'),
-         url('inc/fonts/ubuntumono-r-webfont.woff') format('woff'),
-         url('inc/fonts/ubuntumono-r-webfont.ttf') format('truetype'),
-         url('inc/fonts/ubuntumono-r-webfont.svg#ubuntu_monoregular') format('svg');
+    src: url('../../inc/fonts/ubuntu-l-webfont.eot');
+    src: url('../../inc/fonts/ubuntu-l-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../../inc/fonts/ubuntu-l-webfont.woff2') format('woff2'),
+         url('../../inc/fonts/ubuntu-l-webfont.woff') format('woff'),
+         url('../../inc/fonts/ubuntu-l-webfont.ttf') format('truetype'),
+         url('../../inc/fonts/ubuntu-l-webfont.svg#ubuntu_monoregular') format('svg');
     font-weight: normal;
     font-style: normal;
 
