--- a/views/guestpage/search_menu.html
+++ b/views/guestpage/search_menu.html
@@ -1,5 +1,6 @@
 <div id="searchMenu">
     <header>
+        <a href="#" id="toggleSearchMenu" onclick="search.toggleSearchMenu();"><span class="icon white-close"></span></a>
         <h2>Search</h2>
         <ul id="selectSource">
             <li>Everything</li>
