--- a/inc/css/style.css
+++ b/inc/css/style.css
@@ -883,7 +883,8 @@ div#showElement.frameRight ul li:hover span.buttons .scoreButton {
     margin: 0px;
     padding: 10px;
     cursor:pointer;
-    font-size: 20px;
+    font-size: 18px;
+    vertical-align: middle;
 }
 
 .leftNav > ul > li:hover {
@@ -905,6 +906,11 @@ div#showElement.frameRight ul li:hover span.buttons .scoreButton {
 
 .leftNav > ul > li img{
     
+}
+
+.leftNav span.icon {
+    height: 25px;
+    width: 25px;
 }
 
 .frameRight{
