--- a/inc/css/style.css
+++ b/inc/css/style.css
@@ -909,7 +909,7 @@ div#showElement.frameRight ul li:hover span.buttons .scoreButton {
 }
 
 .leftNav span.icon {
-    height: 25px;
+    height: 21px;
     width: 25px;
 }
 
@@ -2664,6 +2664,11 @@ margin-bottom: -5px;
 
 .fileBrowserSettings li:active{
     background-color: #00bcd4!important;
+}
+
+.fileBrowserSettings li span.icon{
+    width: 22px;
+    height: 18px;
 }
 
 .itemSettingsWindow ul, .rightclick ul{
