--- a/views/guestpage/guest_area.html
+++ b/views/guestpage/guest_area.html
@@ -11,7 +11,7 @@
                     <input type="password" id="password" placeholder="Your Password" class="checkReg">
                     <span id="checkPasswordStatus" class="regError"><div class="arrow-right"></div></span>
                     <input type="password" style="margin-bottom:15px;" id="passwordRepeat" placeholder="Repeat Password" class="checkReg">
-                    <span style="display: inline-block;padding-top: 10px"><input type="checkbox" style="display: inline-block;" class="checkRegBox"> I accept the <a href="#">terms</a></span>
+                    <span style="display: inline-block;padding-top: 10px"><input type="checkbox" style="display: inline-block;" class="checkRegBox"> I accept the <a href="http://wiki.transparency-everywhere.com/en/index.php/Policy" target="_blank">terms</a></span>
                     <input type="hidden" value="" id="checkReg">
                     <input type="submit" class="button" value="Sign me up!">
                     </form>
@@ -23,7 +23,7 @@
                     <li><img src="gfx/guest/icon_01.svg"><span>encrypt your data<br>and communication</span></li>
                     <li><img src="gfx/guest/icon_02.svg"><span>present yourself and<br>stay in touch with your buddies</span></li>
                     <li><img src="gfx/guest/icon_03.svg"><span>save, organize and<br>share your files</span></li>
-                    <li><img src="gfx/guest/icon_04.svg"><span>use public files and<br>make your files accessible</span></li>
+                    <li><img src="gfx/guest/icon_04.svg"><span>use public files and<br>make your files accessable</span></li>
                 </ul>
             </div>
         </div>
