--- a/views/guestpage/search_menu.html
+++ b/views/guestpage/search_menu.html
@@ -1,6 +1,6 @@
 <div id="searchMenu">
     <header>
-        <a href="#" id="toggleSearchMenu" onclick="search.toggleSearchMenu();"><span class="icon white-close"></span></a>
+        <a href="#" id="toggleSearchMenu"><span class="icon white-close"></span></a>
         <h2>Search</h2>
         <ul id="selectSource">
             <li class="trigger">Everything <span class="icon blue-chevron-down"></span></li>
