--- a/views/guestpage/search_menu.html
+++ b/views/guestpage/search_menu.html
@@ -2,6 +2,7 @@
     <header>
         <a href="#" id="toggleSearchMenu"><span class="icon white-close"></span></a>
         <h2>Search</h2>
+        <a href="#" id="openInTelescope">Open in Telescope</a>
         <ul id="selectSource">
             <li class="trigger">Everything <span class="icon blue-chevron-down"></span></li>
             <li data-value="text">Text</li>
