--- a/inc/css/style.css
+++ b/inc/css/style.css
@@ -1041,6 +1041,53 @@ span.icon.blue-chevron-down {}
 #filesystem {
 }
 
+#filesystem {
+}
+
+#filesystem {
+}
+
+#filesystem .uploadTab {
+    background-color: #607d8b;
+    color: #fefefe;
+}
+
+#filesystem #uploader_file #shadow-root input {
+    display: inline-block;
+    background-color:  #00bcd4;
+    width: 100px;
+    height: 35px;
+    font-family: Ubuntu;
+    color:  #ffffff;
+    font-size: 16px; /* Näherungswert aufgrund einer Schriftersetzung */
+    font-weight: 300;
+    text-align: center;
+}
+
+#filesystem .uploaderUploadButton {
+    display: inline-block;
+    background-color:  #00bcd4;
+    width: 100px;
+    height: 35px;
+    font-family: Ubuntu;
+    color:  #ffffff;
+    font-size: 16px; /* Näherungswert aufgrund einer Schriftersetzung */
+    font-weight: 300;
+    text-align: center;
+}
+
+#filesystem .uploaderCancelButton {
+    display: inline-block;
+    background-color:  #37474f;
+    width: 100px;
+    height: 35px;
+    font-family: Ubuntu;
+    color:  #ffffff;
+    font-size: 16px; /* Näherungswert aufgrund einer Schriftersetzung */
+    font-weight: 300;
+    text-align: center;
+}
+
 #filesystem .fileBrowser table.filetable > tr {
     cursor: pointer;
 }
