--- a/inc/css/style.css
+++ b/inc/css/style.css
@@ -1681,6 +1681,8 @@ color: #FFF;
 }
 
 .feedEntry .options .scoreButton{
+    display: inline-block;
+    height: 30px;
     margin-left: -7px;
 }
 
@@ -1691,20 +1693,35 @@ color: #FFF;
 .feedEntry .itemSettingsButton{
     position: absolute;
     right: 7px;
-    margin-top: 1px;
+    margin-top: -5px;
+}
+
+.feedEntry .commentButton{
+    display: inline-block;
+    
+    margin: -7px 0 0px 5px;
+    font-size: 18px;
+    height: 30px;
+    cursor: pointer;
+    position: absolute;
+}
+
+.feedEntry .commentButton .icon{
+    height: 30px;
+    margin-bottom: -5px;
 }
 
 #feedInput{
         
         
         
-	        height: 40px;
+	height: 40px;
         font-size: 25px;
         padding: 8px;
 
 	resize: none;
-	        width: 100%;
-	        margin-left: -10px;
+	width: 100%;
+	margin-left: -10px;
 }
 
 #feedInputBar{
@@ -2183,7 +2200,7 @@ ul .elementSettings {
 
 #chat .chatInput{
 	width: 60%; 
-	margin-bottom: -1px; 
+	margin-top: 3px; 
 	height: 40px;
 	-o-border-radius: 0px;
 	-moz-border-radius: 0px;
@@ -2229,8 +2246,8 @@ ul .elementSettings {
 .chatAdditionalSettings{
 	display:none;
 	position: absolute;
-	bottom: 40px;
-	left: 0px;
+	bottom: 60px;
+	right: 0px;
 	padding: 4px;
 	font-size: 8pt;
 	background-color: rgba(0, 0, 0, 0.8);
@@ -2246,6 +2263,12 @@ ul .elementSettings {
 
 .chatAdditionalSettings .smiley{
 	cursor: pointer;
+}
+
+.smiley{
+    width: 20px;
+    height:20px;
+    display: inline-block;
 }
 
 .chatAdditionalSettings a, .chatAdditionalSettings a:link{
@@ -2272,7 +2295,6 @@ color:#FFFFFF;
     width: 32px;
     height: 32px;
     background-size: 100%;
-    cursor: pointer;
 }
 
 
@@ -2546,7 +2568,9 @@ color:#FFFFFF;
         #dock .icon{
             height: 30px;
             width:30px;
-        }
+        
+            cursor: pointer;
+}
         
         #dock #logout{
             min-width: 10px;
@@ -3520,34 +3544,6 @@ font-family:"Courier New", Courier, monospace;
   -khtml-user-select: none;
   -webkit-user-select: none;
 }
-
-.smiley{ 
-    background: url(../../gfx/smileys.png) no-repeat top left;
-    display: inline-block;
-    vertical-align: top;
-}
-
-.smiley1{ background-position: 0 0; width: 15px; height: 15px; } 
-.smiley2{ background-position: 0 -65px; width: 15px; height: 15px; } 
-.smiley3{ background-position: 0 -130px; width: 15px; height: 15px; } 
-.smiley4{ background-position: 0 -195px; width: 15px; height: 15px; } 
-.smiley5{ background-position: 0 -260px; width: 15px; height: 15px; } 
-.smiley6{ background-position: 0 -325px; width: 15px; height: 15px; } 
-.smiley7{ background-position: 0 -390px; width: 15px; height: 15px; } 
-.smiley8{ background-position: 0 -455px; width: 15px; height: 15px; }
-
-.lockIcon{
-    background: url(../../gfx/icons/lock.png) no-repeat top left;
-    display: inline-block;
-    vertical-align: top; 
-    background-position: 0 0; width: 15px; height: 18px; 
-}
-
-.lockIcon.locked{
-    background: url(../../gfx/icons/locked.png) no-repeat top left;
-}
-
-
 
 /*PLUGINS/
 /*PLUGINS/
