--- a/inc/css/style.css
+++ b/inc/css/style.css
@@ -198,6 +198,7 @@ li.notHidden{
 .signature{
     height: 60px;
     padding: 10px;
+    background: #eceff1;
 }
 
 /*is used to float the user picture right in the signature*/
@@ -209,7 +210,7 @@ li.notHidden{
 
 .userPicture{
     background-position: center center;
-    background-size: 100% 100%;
+    background-size: cover!important;
     background-repeat: no-repeat;
     border: 2px solid;
     float: left;
@@ -1666,13 +1667,10 @@ color: #FFF;
 
 .feedEntry{
     margin: 3%;
-    border: 1px solid #dcdcdc;
-    border-top: 0;
-    border-left: 0;
+    border-bottom: 1px solid #dcdcdc;
     width: 94%;
     float: left;
-    position: relative;  
-    -webkit-box-shadow: 4px 4px 11px 1px rgba(179,179,179,0.68); -moz-box-shadow: 4px 4px 11px 1px rgba(179,179,179,0.68); box-shadow: 4px 4px 11px 1px rgba(179,179,179,0.68);
+    position: relative;    
 }
 
 .feedEntry:nth-child(odd)
@@ -2154,13 +2152,14 @@ ul .elementSettings {
 	margin-left: 0;
 }
 .chatMainFrame header span:last-of-type{
-	margin-right: 10px;
 	margin-left: 0;
 	clear: both;
 }
 .chatMainFrame header span{
-	float: right; margin-left: 10px;
-	margin-right: 10px;
+	float: right; 
+	margin-top: 9px;
+	margin-left: 10px;
+	margin-right: 15px;
 }
 
 .chatMainFrame .dialoge{
@@ -2302,7 +2301,7 @@ color:#FFFFFF;
 
 
 .icon{
-    cursor:default;
+    /* cursor:default; */
     display: inline-block;
     width: 32px;
     height: 32px;
@@ -2613,8 +2612,8 @@ color:#FFFFFF;
         .dockPlayer{
             display:none;
             position: absolute;
-            right: 220px;
-            bottom: 3px;
+            right: 275px;
+            bottom: 0px;
             margin: 0;
             color: #FFF;
             line-height: 40px;
@@ -3402,7 +3401,6 @@ del.bar{
     display:block;
 }
 .profileMain .profile_tab li>div .itemSettingsButton, .grayList li>div .itemSettingsButton{
-    margin-right: -6px;
     position: absolute;
     bottom: 8px;
     right: 0;
