--- a/inc/css/style.css
+++ b/inc/css/style.css
@@ -4562,6 +4562,10 @@ and (max-width : 320px) {
     margin-right: 3px;
 }
 
+.button:hover{
+    background: #FFF;
+}
+
 .antiButton{
     color: #FFF;
     background-color: #37474f;
